# financa_todo_dia

./: .MGXEnv.json  .dockerignore  .env.example  .gitignore  .timeline.json  .wiki.md  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0d838f473b20_corrigir_drop_tabela_usuários_inserir_.py  3b998bc9e703_fix_referencia_tabela_usuario_to_users.py  4355b5d6f028_add_empresas_and_usuarios_tables.py  95c2c3ec123b_add_password_collumn_in_users.py  b292569996ed_corrigir_mapper_de_novas_tabelas_.py
backend/app/: app.db  main.py
backend/app/api/: chat.py  routes.py
backend/app/api/auth/: auth_handler.py
backend/app/api/llm/: chat.py  rag_context.py
backend/app/api/llm/infra/: redis.py
backend/app/api/llm/models/: models.py
backend/app/api/llm/multiagent/: __init__.py  config.py  hybrid_conversation_service.py  langgraph_implementation.py  models.py  multiagent.py  orchestrator.py  task_manager.py  utils.py  validators.py
backend/app/api/llm/providers/: __init__.py  base_provider.py  factory.py  gemini_provider.py  groq_provider.py  lmstudio_provider.py  openai_provider.py
backend/app/api/llm/services/: __init__.py  conversation_service.py  rag_service.py
backend/app/api/llm/tools/: __init__.py  functions.py  tools.py
backend/app/api/models/: models.py  models_response.py
backend/app/data/: __init__.py  database.py  dependencies.py  models.py  seed.py
backend/app/utils/: rag.py
backend/tests/: package_test.py
backend_financa/: .swcrc  Dockerfile  Pipfile  dockerfile  package.json  requirements.txt
backend_financa/app/: database.py  main.py
backend_financa/app/models/: transacao.py
backend_financa/app/routers/: transacao.py
backend_financa/app/schemas/: transacao.py
backend_financa/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
backend_financa/src/auth/: auth.controller.ts  auth.module.ts  auth.service.ts  jwt.strategy.ts
backend_financa/src/config/: database.config.ts  financa.entity.ts
backend_financa/test/: jest-e2e.json
front_cad_financa/: Dockerfile  README.md  index.html  package.json  vite.config.js
front_cad_financa/src/: App.vue  main.js
front_cad_financa/src/assets/: base.css  main.css
front_cad_financa/src/criar_registro/: Financeiro.vue  FormularioTransacao.vue
front_cad_financa/src/repository/: api.js
front_financa/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json
front_financa/src/: App.jsx  index.css  main.jsx
front_financa/src/utils/: api.js  (+1 more)
init-scripts/: init.cypher
react_template/: index.html
react_template/src/: App.jsx
(+27 files in other folders)
